# riak-rust-client

./: .travis.yml  Cargo.toml  README.md
src/: bucket.rs  connection.rs  errors.rs  lib.rs  object.rs  preflist.rs  private_traits.rs  stream.rs  yokozuna.rs
src/rpb/: mod.rs  utils.rs
tests/: client_basics.rs
